[package]
name = "iscy-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = "0.8"
base64 = "0.22"
calamine = "0.26"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
tower = "0.5"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
hmac = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rust_decimal = "1"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["chrono", "json", "postgres", "runtime-tokio-rustls", "rust_decimal", "sqlite"] }
